# cfr_deep_stack

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
cfr_deep_stack/: __init__.py
cfr_deep_stack/algorithms/: __init__.py  cfr.py  evaluation.py
cfr_deep_stack/games/: __init__.py  kuhn_poker.py
csrc/include/algorithm/: best_response_calculator.h  cfr.h  cfr_storage.h  data_propagation.h  poker_cfr_solver.h
csrc/include/game/: kuhn.h
csrc/include/game/poker/: README.md  abstracted_action.h  action.h  action_resolver.h  belief.h  game_basic.h  hand_equity_calculator.h  hand_evaluator.h  isomorphic_mapping.h  money.h  node_state.h  poker_card.h  poker_cards.h  poker_cards_isomorphic_index.h  poker_hand.h  poker_tree.h  subgame_setup.h  terminal_cfv_calculator.h  terminal_win_prob_matrix.h  tree_abstracted_bets.h
csrc/src/algorithm/: best_response_calculator.cc  cfr.cc  cfr_storage.cc  data_propagation.cc  poker_cfr_solver.cc
csrc/src/binding/: pybind.cc
csrc/src/game/: kuhn.cc
csrc/src/game/poker/: README.md  abstracted_action.cc  action.cc  action_resolver.cc  belief.cc  game_basic.cc  hand_equity_calculator.cc  hand_evaluator.cc  isomorphic_mapping.cc  node_state.cc  poker_card.cc  poker_cards.cc  poker_cards_isomorphic_index.cc  poker_hand.cc  poker_tree.cc  subgame_setup.cc  terminal_cfv_calculator.cc  terminal_win_prob_matrix.cc  tree_abstracted_bets.cc
csrc/tests/algorithm/: best_response_calculator_test.cc  cfr_storage_test.cc  cfr_test.cc  data_propagation_test.cc  poker_cfr_solver_test.cc  realistic_spot_regression_test.cc
csrc/tests/algorithm/data/: river_test_case.json  turn_test_case.json
csrc/tests/game/poker/: abstracted_action_test.cc  action_test.cc  belief_test.cc  game_basic_test.cc  hand_equity_calculator_test.cc  hand_evaluator_test.cc  isomorphic_mapping_test.cc  node_state_test.cc  poker_card_test.cc  poker_cards_isomorphic_index_test.cc  poker_cards_test.cc  poker_hand_test.cc  poker_tree_test.cc  subgame_setup_test.cc  terminal_cfv_benchmark_test.cc  terminal_cfv_calculator_test.cc  terminal_win_prob_matrix_test.cc  tree_abstracted_bets_test.cc
pysrc/data/: __init__.py  chance_target_generator.py  random_spot_sampler.py  turn_chance_node_sampler.py
pysrc/fisher/: __init__.py
pysrc/fisher/data/: chance_target_generator.py  random_spot_sampler.py
pysrc/tests/: test_chance_target_generator.py  test_kuhn_poker.py  test_random_spot_sampler.py  test_turn_chance_node_sampler.py
tests/: test_kuhn_cfr.py
