[build-system]
requires = ["setuptools>=61", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "fisher"
version = "0.1.0"
description = "C++ CFR benchmark for Kuhn poker"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=2.0",
]

[dependency-groups]
dev = [
  "pytest>=7",
  "pybind11>=2.12",
]

[tool.setuptools.packages.find]
where = ["pysrc"]
include = ["fisher*", "data*"]

[tool.pytest.ini_options]
testpaths = ["pysrc/tests"]
pythonpath = ["pysrc"]
